fix poor contrast of sidenav links

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -66,7 +66,7 @@
   }
 }
 
-.page-header, .page-footer {
+.nav-wrapper, .page-footer {
   a {
     color: color("light-blue", "lighten-4");
 
